@@ -1,0 +1,20 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!--$Id$-->
+<!DOCTYPE specification PUBLIC "-//Primix Solutions//Tapestry Specification 1.0//EN"
+"http://tapestry.sourceforge.net/dtd/Tapestry_1_0.dtd">
+<specification>
+	<class>com.primix.tapestry.components.validating.FieldLabel</class>
+	<allow-body>no</allow-body>
+	<parameters>
+		<allow-informal-parameters>no</allow-informal-parameters>
+		<parameter>
+			<name>field</name>
+			<java-type>com.primix.tapestry.components.validating.IValidatingTextField</java-type>
+			<required>yes</required>
+		</parameter>
+		<parameter>
+			<name>delegate</name>
+			<java-type>com.primix.tapestry.components.validating.IValidationDelegate</java-type>
+		</parameter>
+	</parameters>
+</specification>
